--- a/resume.html
+++ b/resume.html
@@ -174,4 +174,4 @@ permalink: /resume/
 </tbody>
 </table>
 
-<p><a href="/LaurieAllenResume201901.pdf">Download Resume PDF</a> </p>
+<p><a href="/LaurieAllenResume2019.pdf">Download Resume PDF</a> </p>
