--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@ permalink: /resume/
 <tr class="even">
 <td><ul>
 <li><p>Developed a plan for a new department, hired staff, and created policies and workflows to support successful growth of the Digital Scholarship department, responsible for working with faculty and students to create and share scholarship in new forms.</p></li>
-<li><p>Participated in created systems to support technical infrastructure, project support, sustainable program growth, consultations and course support.</p></li>
+<li><p>Created systems to support technical infrastructure, project support, sustainable program growth, consultations and course support.</p></li>
 <li><p>Lead a Digital Scholarship department of eight librarians in:</p>
 <ul>
 <li><p>Digital Humanities</p></li>
